--- a/view/index.html
+++ b/view/index.html
@@ -186,7 +186,7 @@
                     <div id="filter">
                         <a href="https://codepen.io/Zory/pen/JjpLYZL"  target="_blank">                    
                         <hr> 
-                        <h4>Treemapmap Diagram</h4>
+                        <h4>Treemap Diagram</h4>
                         <p> This App is Data Visualization project built with HTML, JavaScript, CSS, and the D3 svg-based visualization library.</p> 
                         <hr> </a>
                     </div> 
