--- a/public/styles.css
+++ b/public/styles.css
@@ -291,32 +291,31 @@ hr{
     font-size: larger;
 }
 .card-1.active-c{
+    animation: fadeIn 1.5s;
     opacity: 1;
     display:block ;
     
 
 }
 .card-1{
-    animation: fadeIn 1s;
     display: none;
 }
 .card-2.active-c{
-    animation: fadeIn 1s;
+    animation: fadeIn 1.5s;
     display:block ;
 }
 .card-2{
-    
     display: none;
 }
 .card-3.active-c{
-    animation: fadeIn 1s;
+    animation: fadeIn 1.5s;
     display:block ;
 }
 .card-3{
     display: none;
 }
 .card-4.active-c{
-    animation: fadeIn 1s;
+    animation: fadeIn 1.5s;
     display:block ;
 }
 .card-4{
@@ -537,11 +536,20 @@ color:coral;
 /* -----------------------animation---------------------------------- */
 @keyframes fadeIn {
     from {
-         opacity: 0;
+         opacity: 0.5;
     }
 
     to {
          opacity: 1;
+    }
+}
+@keyframes fadeOut {
+    from {
+         opacity: 1;
+    }
+
+    to {
+         opacity: 0.5;
     }
 }
 
