--- a/public/styles.css
+++ b/public/styles.css
@@ -193,7 +193,7 @@ margin: 5px 0;
 /* ------------projects------------------------------------------- */
 
 .projects{
-    margin-top: 100px;
+    margin-top: 90px;
     font-weight: 800 ;
     font-size:3.5em;
     text-align: center;
@@ -202,6 +202,13 @@ margin: 5px 0;
     background-color: white;
     color: black;
 }
+#projects{     
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: space-around;
+    transition: 0.5s;
+    }   
 #p-card {   
     height: fit-content;
     display: flex;
@@ -309,6 +316,7 @@ hr{
 }
 .card-2.active-c.turnOff{
     animation:fadeOut 0.5s;
+    animation-fill-mode: forwards;
 }
 .card-2{
     display: none;
@@ -392,15 +400,8 @@ hr{
     #about{ 
         height: 100vh;
         margin: 5% 25%;
-    }
-    
-    #projects{     
-    display: flex;
-    flex-direction: column;
-    height: min-content;
-    justify-content: space-around;
-    transition: 0.5s;
     }    
+ 
 }
 @media only screen and (max-height:600px),(max-width:800px){
   
@@ -408,15 +409,7 @@ hr{
     height: min-content;
     margin:5% 10%;
     }
-   
-    #projects{   
-    /* text-align: center;    */ 
-    display: flex;
-    flex-direction: column;
-    height: min-content;
-    justify-content: space-around;
-    transition: 0.5s;
-    }    
+      
     }
 
 
