--- a/view/index.html
+++ b/view/index.html
@@ -316,10 +316,64 @@
            <div  class="pr-list">
                <ul id="row" class="next">
                   <li><a class="btn btn-light" id="next" onclick="openPCard('card-3', 'card-4')">PREVIOUS</a></li>               
-                                
+                  <li><a class="btn btn-light" id="prev" onclick="openPCard('card-5', 'card-4')">NEXT</a></li>               
               </ul> 
           </div>
            </div><!-- end project card 4-->  
+            <div id="card-5" class="card-5">
+                <div id="p-card">             
+               <div  class="project-tile">                                   
+                       <img id="project-pic" src="../pictures/ZahaHadid.jpg"  alt="Architect Zaha Hadid Tribute Page"/>
+                       <hr>  Architect Zaha Hadid Tribute Page
+                   <div id="filter">
+                       <a href="https://codepen.io/Zory/pen/mdLyNmL"  target="_blank">                    
+                       <hr> 
+                       <h4>Architect Zaha Hadid Tribute Page</h4>
+                       <p> App build with HTML and CSS. </p> 
+                       <hr> </a>
+                   </div>
+               </div>					 	
+               <div  class="project-tile" >           
+                       <img id="project-pic" src="../pictures/Header Parser.jpg"  alt="Header Parser Microservice"/>
+                       <hr> Header Parser Microservice
+                   <div id="filter">
+                       <a href="https://boilerplate-project-headerparser.zorrey.repl.co/" target="_blank">                    
+                        <hr> 
+                       <h4>Header Parser Microservice</h4>
+                       <p> This full stack JavaScript app is built with Node.js, Express.js and MongoDB database.</p> 
+                       <hr> </a>
+                   </div> 
+               </div>	
+               <div  class="project-tile">                
+                       <img id="project-pic" src="../pictures/TimeStamp.jpg"  alt="Timestamp Microservice"/>
+                       <hr> Timestamp Microservice
+                   <div id="filter">
+                       <a href="https://project-timestamp.zorrey.repl.co" target="_blank">                    
+                       <hr> 
+                       <h4>Timestamp Microservice</h4>
+                       <p> This full stack JavaScript app is built with Node.js, Express.js, MongoDB database and Mangoose.</p> 
+                       <hr> </a>
+                   </div> 
+               </div>	
+               <div  class="project-tile" >                
+                       <img id="project-pic" src="../pictures/URL Shortener.jpg"  alt="URL Shortener Microservice"/>
+                       <hr>URL Shortener Microservice
+                   <div id="filter">
+                       <a href="https://boilerplate-project-urlshortener.zorrey.repl.co/" target="_blank">                    
+                       <hr> 
+                       <h4>URL Shortener Microservice</h4>
+                       <p> This full stack JavaScript app is built with Node.js, Express.js and Mongoose-MongoDB database.</p> 
+                       <hr> </a>
+                   </div> 
+               </div>	                 
+           </div> 
+           <div  class="pr-list">
+               <ul id="row" class="next">
+                  <li><a class="btn btn-light" id="next" onclick="openPCard('card-4', 'card-5')">PREVIOUS</a></li>               
+                                
+              </ul> 
+          </div>
+           </div><!-- end project card 5-->  
                         
         </section> <!--  end projects -->
         <!-- <script  src="../public/index.js"></script> -->
