--- a/public/styles.css
+++ b/public/styles.css
@@ -246,7 +246,7 @@ margin: 5px 0;
 #filter{
     width: 100%;
     height: 0%;
-    background: linear-gradient(rgba(25,25,25,0.5), rgba(105, 13, 13, 0.8));
+    background: linear-gradient(rgba(25,25,25,0.7), rgba(105, 13, 13, 1));
     border-radius: 5px;
     position: absolute;
     left: 0;
@@ -339,6 +339,16 @@ hr{
     animation:fadeOut 0.5s;
 }
 .card-4{
+    display: none;
+}
+.card-5.active-c{
+    animation: fadeIn 1s;
+    display:block ;
+}
+.card-5.active-c.turnOff{
+    animation:fadeOut 0.5s;
+}
+.card-5{
     display: none;
 }
 
