--- a/public/styles.css
+++ b/public/styles.css
@@ -14,7 +14,7 @@
    /*  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
 }
 body{
-    background: rgb(50, 50, 50);
+    background: rgb(25, 24, 24);
     color:whitesmoke;    
 }
 .container{ 
@@ -85,14 +85,14 @@ nav ul li a:hover::after {
     display:grid;
     grid-template-rows: 1fr 5fr;
     background-image: url(../pictures/BG02.jpg);
-    background-size: cover;
+    background-size:cover;
     background-position: center;
     width:100%;
     height: 100vh;
 }
 .overlay{
-    background-color: black;
-    opacity: 0.4;
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,1));
+    opacity: 0.9;
     width: 100%;
     height: 100vh;
     position: absolute;
