--- a/public/styles.css
+++ b/public/styles.css
@@ -84,7 +84,7 @@ nav ul li a:hover::after {
 #header{    
     display:grid;
     grid-template-rows: 1fr 5fr;
-    background-image: url(../pictures/BG02.jpg);
+    /*background-image: url(../pictures/BG02.jpg);*/
     background-size:cover;
     background-position: center;
     width:100%;
@@ -213,7 +213,7 @@ margin: 5px 0;
     height: fit-content;
     display: flex;
     justify-content: center;
-    margin: 15px auto;
+    margin: 5px auto;
 }
 
 .project-tile{ 
@@ -223,9 +223,9 @@ margin: 5px 0;
     border-width: 1px;
     border-color: darkgray;
     position: relative;
-    margin: 5% 15px;
-    width: 200px;
-    height: 300px;
+    margin: 0% 15px;
+    width: 250px;
+    height: 400px;
     box-shadow: rgb(194, 192, 192) 5px 5px;  
     color:black; 
     transition: 0.5s;
@@ -262,12 +262,23 @@ margin: 5px 0;
     transition: height 0.5s;
 }
 
+.project-tile iframe{
+    border-radius: 8px;
+    width: 100%;
+    height:75%; 
+    overflow: hidden; 
+    transition: transform 0.5s; 
+}
 .project-tile img{
     border-radius: 8px;
     width: 100%;
     height:75%; 
     overflow: hidden; 
     transition: transform 0.5s; 
+} 
+.project-tile:hover iframe{
+  transform: scale(1.05);
+   
 }
 .project-tile:hover img{
   transform: scale(1.05);
@@ -295,7 +306,7 @@ hr{
     text-decoration: none;
     color: black;
     font-weight: 800;
-    font-size: larger;
+    font-size: x-large;
 }
 .card-1.active-c{
     animation: fadeIn 1s;
@@ -349,6 +360,16 @@ hr{
     animation:fadeOut 0.5s;
 }
 .card-5{
+    display: none;
+}
+.card-6.active-c{
+    animation: fadeIn 1s;
+    display:block ;
+}
+.card-6.active-c.turnOff{
+    animation:fadeOut 0.5s;
+}
+.card-6{
     display: none;
 }
 
@@ -568,3 +589,10 @@ color:coral;
     }
 }
 
+iframe{
+    border-radius: 8px;
+    width: 100%;
+    height:75%; 
+    overflow: hidden; 
+    transition: transform 0.5s; 
+}
