--- a/view/index.html
+++ b/view/index.html
@@ -320,7 +320,73 @@
               </ul> 
           </div>
            </div><!-- end project card 4-->  
+            
             <div id="card-5" class="card-5">
+                <div id="p-card">             
+                    <div  class="project-tile">                                   
+                        <img id="project-pic" src="../pictures/ZahaHadid.jpg"  alt="Architect Zaha Hadid Tribute Page"/>
+                        <hr>  Architect Zaha Hadid Tribute Page
+                    <div id="filter">
+                        <a href="https://codepen.io/Zory/pen/mdLyNmL"  target="_blank">                    
+                        <hr> 
+                        <h4>Architect Zaha Hadid Tribute Page</h4>
+                        <p> App build with HTML and CSS. </p> 
+                        <hr> </a>
+                    </div>
+                </div>					 	
+               <div  class="project-tile" >           
+                       <!-- <img id="project-pic" src="https://codepen.io/Zory/pen/QWrNQQR"  alt="Landing Page"/> -->
+                       <iframe height="557.6271057128906" style="width: 100%;" scrolling="no" title="Landing  Page - certification project." src="https://codepen.io/Zory/embed/preview/QWrNQQR?default-tab=result&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                        See the Pen <a href="https://codepen.io/Zory/pen/QWrNQQR">
+                        Landing  Page - certification project.</a> by Zory (<a href="https://codepen.io/Zory">@Zory</a>)
+                        on <a href="https://codepen.io">CodePen</a>.
+                      </iframe>
+                       <hr> Landing  Page - certification project.
+                   <div id="filter">
+                       <a href="https://codepen.io/Zory/pen/QWrNQQR" target="_blank">                    
+                       <hr> 
+                       <h4>Landing  Page - certification project.</h4>
+                       <p> App build with HTML, CSS and JavaScript.</p> 
+                       <hr> </a>
+                   </div> 
+               </div>	
+               <div  class="project-tile">                
+                       <!-- <img id="project-pic" src="../pictures/library.jpg"  alt="Personal Library"/> -->
+                       <iframe height="300" style="width: 100%;" scrolling="no" title="Survey Form" src="https://codepen.io/Zory/embed/preview/wvjGjLm?default-tab=result&theme-id=dark" 
+                        frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                        See the Pen <a href="https://codepen.io/Zory/pen/wvjGjLm">
+                        Survey Form</a> by Zory (<a href="https://codepen.io/Zory">@Zory</a>)
+                        on <a href="https://codepen.io">CodePen</a>.
+                      </iframe>
+                       <hr> Survey Form
+                   <div id="filter">
+                       <a href="https://library-main.zorrey.repl.co" target="_blank">                    
+                       <hr> 
+                       <h4>Survey Form</h4>
+                       <p> App build with HTML, CSS and JavaScript.</p> 
+                       <hr> </a>
+                   </div> 
+               </div>	
+               <div  class="project-tile" >                
+                       <img id="project-pic" src="../pictures/Ex Tracker.jpg"  alt="Exercise tracker"/>
+                       <hr>Exercise tracker
+                   <div id="filter">
+                       <a href="https://exercisetracker.zorrey.repl.co" target="_blank">                    
+                       <hr> 
+                       <h4>Exercise tracker</h4>
+                       <p> This full stack JavaScript app is built with Node.js, Express.js,Mongoose-MongoDB database and tested with Mocha and Chai.</p> 
+                       <hr> </a>
+                   </div> 
+               </div>	                 
+           </div> 
+           <div  class="pr-list">
+               <ul id="row" class="next">
+                  <li><a class="btn btn-light" id="next" onclick="openPCard('card-4', 'card-5')">PREVIOUS</a></li>               
+                  <li><a class="btn btn-light" id="prev" onclick="openPCard('card-6', 'card-5')">NEXT</a></li>               
+              </ul> 
+          </div>
+           </div><!-- end project card 5-->  
+            <div id="card-6" class="card-6">
                 <div id="p-card">             
                <div  class="project-tile">                                   
                        <img id="project-pic" src="../pictures/ZahaHadid.jpg"  alt="Architect Zaha Hadid Tribute Page"/>
@@ -369,11 +435,11 @@
            </div> 
            <div  class="pr-list">
                <ul id="row" class="next">
-                  <li><a class="btn btn-light" id="next" onclick="openPCard('card-4', 'card-5')">PREVIOUS</a></li>               
+                  <li><a class="btn btn-light" id="next" onclick="openPCard('card-5', 'card-6')">PREVIOUS</a></li>               
                                 
               </ul> 
           </div>
-           </div><!-- end project card 5-->  
+           </div><!-- end project card 6-->  
                         
         </section> <!--  end projects -->
         <!-- <script  src="../public/index.js"></script> -->
