--- a/view/index.html
+++ b/view/index.html
@@ -81,12 +81,16 @@
                 <ul>
                     <li>
                         <span>Certificates:</span> </br>
-                        FreeCodeCamp certificates and projects.
-                        <ul class="indent"><li>JavaScript Algorithms and Data Structures - Developer Certification</li>
+                        FreeCodeCamp certificates representing approximately 300 hours of coursework.
+                        <ul class="indent">
+                        <li>Responsive Web Design - Developer Certification</li>    
+                        <li>JavaScript Algorithms and Data Structures - Developer Certification</li>                        
                         <li>Front End Development Libraries - Developer Certification</li>
                         <li>Data Visualization - Developer Certification</li>
                         <li>Back End Development and APIs - Developer Certification</li>
-                        </ul> 
+                        <li>Quality Assurance</li>
+                        <li>Scientific Computing with Python</li>
+                        <li>Relational Database</li>
                     </li>
                     <li><span>University:</span></br>MSc Informatics - Multimedia Technology.
                     </li>
