new certificates hours

--- a/view/index.html
+++ b/view/index.html
@@ -81,7 +81,7 @@
                 <ul>
                     <li>
                         <span>Certificates:</span> </br>
-                        FreeCodeCamp certificates representing approximately 300 hours of coursework.
+                        FreeCodeCamp certificates representing approximately 300 hours of coursework per certificate.
                         <ul class="indent">
                         <li>Responsive Web Design - Developer Certification</li>    
                         <li>JavaScript Algorithms and Data Structures - Developer Certification</li>                        
