--- a/view/index.html
+++ b/view/index.html
@@ -334,7 +334,7 @@
                         <a href="https://codepen.io/Zory/pen/mdLyNmL"  target="_blank">                    
                         <hr> 
                         <h4>Architect Zaha Hadid Tribute Page</h4>
-                        <p> App build with HTML and CSS. </p> 
+                        <p> App built with HTML and CSS. </p> 
                         <hr> </a>
                     </div>
                 </div>					 	
@@ -350,7 +350,7 @@
                        <a href="https://codepen.io/Zory/pen/QWrNQQR" target="_blank">                    
                        <hr> 
                        <h4>Landing  Page - certification project.</h4>
-                       <p> App build with HTML, CSS and JavaScript.</p> 
+                       <p> App built with HTML, CSS and JavaScript.</p> 
                        <hr> </a>
                    </div> 
                </div>	
@@ -367,7 +367,7 @@
                        <a href="https://library-main.zorrey.repl.co" target="_blank">                    
                        <hr> 
                        <h4>Survey Form</h4>
-                       <p> App build with HTML, CSS and JavaScript.</p> 
+                       <p> App built with HTML, CSS and JavaScript.</p> 
                        <hr> </a>
                    </div> 
                </div>	
@@ -399,7 +399,7 @@
                        <a href="https://codepen.io/Zory/pen/mdLyNmL"  target="_blank">                    
                        <hr> 
                        <h4>Architect Zaha Hadid Tribute Page</h4>
-                       <p> App build with HTML and CSS. </p> 
+                       <p> App built with HTML and CSS. </p> 
                        <hr> </a>
                    </div>
                </div>					 	
