--- a/view/index.html
+++ b/view/index.html
@@ -91,12 +91,19 @@
                         <li>Quality Assurance</li>
                         <li>Scientific Computing with Python</li>
                         <li>Relational Database</li>
+                        </ul>
                     </li>
-                    <li><span>University:</span></br>MSc Informatics - Multimedia Technology.
+                    <li>
+                        <span>University:</span></br>
+                        <ul class="indent">
+                          <li>MSc Informatics - Multimedia Technology.</li>
+                          <li>MSc Architecture.
+                            </br>
+                            Course in MSc Urban Planning.</li>    
+                        </ul>
+                        
                     </li>
-                    <li>MSc Architecture.
-                        </br>
-                        Course in MSc Urban Planning.</li>                  
+                                    
                 </ul>               
             </div>            
           </div>  
