--- a/view/index.html
+++ b/view/index.html
@@ -31,8 +31,8 @@
             </div>
             <ul id ="menu-column" >
                 <li><a class="nav" href="#welcome-section">WELCOME</a></li>
-                <li><a class="nav" href="#about">   ABOUT </a></li>
-                <li><a  class="nav" href="#projects"> PROJECTS</a> </li>  
+                <li><a class="nav" href="#about"> ABOUT </a></li>
+                <li><a  class="nav" href="#projects"> PROJECTS </a> </li>  
             </ul>
             </nav>
             
@@ -81,16 +81,20 @@
                 <ul>
                     <li>
                         <span>Certificates:</span> </br>
-                        FreeCodeCamp certificates representing approximately 300 hours of coursework per certificate.
+                        FreeCodeCamp certificates, representing approximately 300 hours of coursework per certificate.
                         <ul class="indent">
-                        <li>Responsive Web Design - Developer Certification</li>    
-                        <li>JavaScript Algorithms and Data Structures - Developer Certification</li>                        
-                        <li>Front End Development Libraries - Developer Certification</li>
-                        <li>Data Visualization - Developer Certification</li>
-                        <li>Back End Development and APIs - Developer Certification</li>
+                        <li>Responsive Web Design </li>    
+                        <li>JavaScript Algorithms and Data Structures</li>                        
+                        <li>Front End Development Libraries</li>
+                        <li>Data Visualization</li>
+                        <li>Back End Development and APIs</li>
                         <li>Quality Assurance</li>
                         <li>Scientific Computing with Python</li>
                         <li>Relational Database</li>
+                        <li>Legacy Information Security and Quality Assurance</li>
+                        FreeCodeCamp Developer Certification, <br>representing approximately 1800 hours of coursework.
+                        <li>Legacy Full Stack </li>
+
                         </ul>
                     </li>
                     <li>
