--- a/view/index.html
+++ b/view/index.html
@@ -92,7 +92,9 @@
                         <li>Scientific Computing with Python</li>
                         <li>Relational Database</li>
                         <li>Legacy Information Security and Quality Assurance</li>
+                        </ul>
                         FreeCodeCamp Developer Certification, <br>representing approximately 1800 hours of coursework.
+                        <ul class="indent"></ul>
                         <li>Legacy Full Stack </li>
 
                         </ul>
