--- a/view/index.html
+++ b/view/index.html
@@ -93,7 +93,7 @@
                         <li>Relational Database</li>
                         <li>Legacy Information Security and Quality Assurance</li>
                         </ul>
-                        FreeCodeCamp Developer Certification, <br>representing approximately 1800 hours of coursework.
+                        FreeCodeCamp Developer Certification, representing approximately 1800 hours of coursework.
                         <ul class="indent"></ul>
                         <li>Legacy Full Stack </li>
 
