--- a/view/index.html
+++ b/view/index.html
@@ -94,7 +94,7 @@
                         <li>Legacy Information Security and Quality Assurance</li>
                         </ul>
                         FreeCodeCamp Developer Certification, representing approximately 1800 hours of coursework.
-                        <ul class="indent"></ul>
+                        <ul class="indent">
                         <li>Legacy Full Stack </li>
 
                         </ul>
