--- a/view/index.html
+++ b/view/index.html
@@ -81,21 +81,21 @@
                 <ul>
                     <li>
                         <span>Certificates:</span> </br>
-                        FreeCodeCamp certificates, representing approximately 300 hours of coursework per certificate.
+                        FreeCodeCamp certificates, representing approximately 300 hours of coursework per certificate:
                         <ul class="indent">
-                        <li>Responsive Web Design </li>    
-                        <li>JavaScript Algorithms and Data Structures</li>                        
-                        <li>Front End Development Libraries</li>
-                        <li>Data Visualization</li>
-                        <li>Back End Development and APIs</li>
-                        <li>Quality Assurance</li>
-                        <li>Scientific Computing with Python</li>
-                        <li>Relational Database</li>
-                        <li>Legacy Information Security and Quality Assurance</li>
+                        <li>- Responsive Web Design </li>    
+                        <li>-JavaScript Algorithms and Data Structures</li>                        
+                        <li>- Front End Development Libraries</li>
+                        <li>- Data Visualization</li>
+                        <li>- Back End Development and APIs</li>
+                        <li>- Quality Assurance</li>
+                        <li>- Scientific Computing with Python</li>
+                        <li>- Relational Database</li>
+                        <li>- Legacy Information Security and Quality Assurance</li>
                         </ul>
-                        FreeCodeCamp Developer Certification, representing approximately 1800 hours of coursework.
+                        FreeCodeCamp Developer Certification, representing approximately 1800 hours of coursework:
                         <ul class="indent">
-                        <li>Legacy Full Stack </li>
+                        <li>- Legacy Full Stack </li>
 
                         </ul>
                     </li>
