--- a/view/index.html
+++ b/view/index.html
@@ -40,6 +40,9 @@
             <h2> Hi, I'm Zory.</h2>
             <p> Front-end / Back-end Developer </p>
         </div>
+        <div id="header-proj">
+            <iframe width="100%" height="600px" src="https://sudoku.zorrey.repl.co"></iframe>         
+        </div>
         
     </section>  <!-- end header -->    
 
