--- a/view/index.html
+++ b/view/index.html
@@ -41,7 +41,7 @@
             <p> Front-end / Back-end Developer </p>
         </div>
         <div id="header-proj">
-            <iframe width="60%" height="400px" src="https://sudoku.zorrey.repl.co"></iframe>         
+          <!--   <iframe width="60%" height="400px" src="https://sudoku.zorrey.repl.co"></iframe>    -->      
         </div>
         
     </section>  <!-- end header -->    
