--- a/public/styles.css
+++ b/public/styles.css
@@ -14,14 +14,19 @@
    /*  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
 }
 body{
-    background: rgb(25, 24, 24);
+    background: radial-gradient(rgba(66, 61, 49, 0.9), rgba(0,0,0,1));
     color:whitesmoke;    
 }
 .container{ 
     padding: 0px;   
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;  
+    margin-top: 50px; 
 } 
+.container.mid{
+    margin-top: 0;
+}
+
 ul{
     padding: 0px;
 }
@@ -40,6 +45,7 @@ ul li  {
     width: 100%;
     display: flex;
     flex-direction: row;
+    margin-top: 15px;
 }
 
 nav{
@@ -75,29 +81,29 @@ nav ul li a:hover::after {
     content: '';
     width: 100%;
     height: 3px;
-    background-color:coral;
+    background-color:white;
     position: absolute;
 }
 
 
 /* --------------------------header----------------------- */
-#header{    
+/* #header{    
     display:grid;
     grid-template-rows: 1fr 5fr;
-    /*background-image: url(../pictures/BG02.jpg);*/
+    /*background-image: url(../pictures/BG02.jpg);
     background-size:cover;
     background-position: center;
     width:100%;
     height: 100vh;
-}
-.overlay{
-    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.3));
-    opacity: 0.9;
+} */
+ .overlay{
+    background: radial-gradient(rgba(66, 61, 49, 0.5), rgba(0,0,0,0.9)); 
+    opacity: 0.6;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: absolute;
     z-index: 0;
-}
+} 
 
 #header-text{
     padding: 0px 15px;
@@ -107,7 +113,6 @@ nav ul li a:hover::after {
 }
 
 .logo{
-    background-color: white;
     width: 120px;
     height: calc(var(--navBar) - 2 * var(padding));
     margin: 5px 10px;
@@ -119,10 +124,10 @@ nav ul li a:hover::after {
     flex-direction: row;
     justify-content: space-between;
     padding: 0px;
+    z-index: 2;
 }
 
 #navbar{
-    background-color: black;
     position:fixed;
     width: 100%;
     height: var(--navBar);
@@ -142,10 +147,12 @@ nav ul li a:hover::after {
 margin: 5px 0;
 }
 #menu-column.show  {
-    padding: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 55px;
     display: block;
     position: fixed;
-    top:55px;
+    top:0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.6);
     font-size: large;
@@ -183,7 +190,7 @@ margin: 5px 0;
     text-align: center;
     width:100%;
     height:100vh;
-    background-color: black;
+    background-color: rgba(0, 0, 0,0.5);
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -193,44 +200,76 @@ margin: 5px 0;
 /* ------------projects------------------------------------------- */
 
 .projects{
-    margin-top: 90px;
+    margin-top: 70px;
+    margin-bottom: 20px;
     font-weight: 800 ;
     font-size:3.5em;
     text-align: center;
 }
-#projects{
+.data{
+    margin: 0;
+    padding: 0;
+}
+/* #projects{
     background-color: white;
     color: black;
+} */
+ .canvas{
+    color: black; 
 }
 #projects{     
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    justify-content: space-around;
+    align-items: center;
     transition: 0.5s;
     }   
 #p-card {   
     height: fit-content;
     display: flex;
-    justify-content: center;
+    justify-content:space-evenly;
     margin: 5px auto;
 }
 
-.project-tile{ 
-    padding: 10px;
-    border-radius: 8px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: darkgray;
+.project-tile.a{ 
+    border: 1px solid white; 
     position: relative;
-    margin: 0% 15px;
-    width: 250px;
-    height: 400px;
-    box-shadow: rgb(194, 192, 192) 5px 5px;  
-    color:black; 
+    margin: 10px 10px;
+    width: 480px;
+    height: 480px;
+    overflow: hidden; 
+    background-color: white;
+    color:rgb(131, 125, 125); 
     transition: 0.5s;
     text-align: center;
 }
+
+.column{
+    display: flex;
+    flex-direction: column;
+}
+
+.project-tile{ 
+    position: relative;
+    margin: 10px 10px;
+    overflow: hidden; 
+    border: 1px solid white; 
+    transition: 0.5s;
+    text-align: center;
+    width: 230px;
+    height:350px;
+}
+.project-tile.b{ 
+    position: relative;
+    margin: 10px 10px;
+    width: 230px;
+    height:230px;
+    overflow: hidden; 
+    border: 1px solid white; 
+    transition: 0.5s;
+    text-align: center;
+}
+
 #filter a{
    color: white; 
    text-decoration: none;
@@ -246,8 +285,7 @@ margin: 5px 0;
 #filter{
     width: 100%;
     height: 0%;
-    background: linear-gradient(rgba(25,25,25,0.7), rgba(105, 13, 13, 1));
-    border-radius: 5px;
+    background: linear-gradient(rgba(25,25,25,0.7), rgb(42, 34, 34));
     position: absolute;
     left: 0;
     bottom: 0;
@@ -269,11 +307,18 @@ margin: 5px 0;
     overflow: hidden; 
     transition: transform 0.5s; 
 }
-.project-tile img{
-    border-radius: 8px;
-    width: 100%;
-    height:75%; 
+.window{
+    padding: 20px;
+    height: 80%;
     overflow: hidden; 
+}
+.window.a{
+    padding: 40px;
+    height: 75%;
+    overflow: hidden; 
+}
+.project-tile img{
+    width: 100%;
     transition: transform 0.5s; 
 } 
 .project-tile:hover iframe{
@@ -288,16 +333,26 @@ margin: 5px 0;
  height: 100%;
    
 }
-
+.btn.btn-light{
+padding: 3px;
+}
 
 hr{
     margin: 8px 0;
 }
-.next{        
-    margin-bottom: 100px;
-    justify-content: center;
-    
+.next{  
+    margin-top: 20px;      
+    margin-bottom: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    cursor: pointer;
+    color:white;
+    align-items: center;
    
+}
+#inv{
+    visibility: hidden;
 }
 .pr-list{
     text-align: center;    
@@ -306,7 +361,7 @@ hr{
     text-decoration: none;
     color: black;
     font-weight: 800;
-    font-size: x-large;
+    font-size: large;
 }
 .card-1.active-c{
     animation: fadeIn 1s;
@@ -372,9 +427,35 @@ hr{
 .card-6{
     display: none;
 }
+.card-7.active-c{
+    animation: fadeIn 1s;
+    display:block ;
+}
+.card-7.active-c.turnOff{
+    animation:fadeOut 0.5s;
+}
+.card-7{
+    display: none;
+}
+.card-1,.card-2, .card-3, .card-4, .card-5, .card-6{
+    margin-top: 0px;
+}
 
-
+a.page{
+    display: flex;
+    flex-direction: row;
+    color: white;
+    padding: 10px;
+}
+a.page.active{
+    color: #b54769;
+}
 /* ----------------@media----------------------------------------- */
+@media only screen and (max-width:1000px) and (min-width:600px){
+    .column{
+        flex-direction: row;
+    }
+}
 
 @media only screen and (max-width:1000px){
     #p-card {  
@@ -386,7 +467,9 @@ hr{
         transition: 0.5s;
         }    
     }
+
 @media screen and (min-width:700px){
+
     #ham{
         display: none;
     }
@@ -408,6 +491,11 @@ hr{
 }
 
 @media screen and (max-width:701px){
+    .welcome{
+        font-size: 2.2em;
+        padding: 0;
+        margin: 0;
+    }
     #ham{
         display: block;
     }
@@ -423,6 +511,41 @@ hr{
     #profile-link{
         display: none;
       }
+    .column{
+        flex-direction: column;
+    }  
+    .project-tile.a{ 
+        margin: 10;
+        padding: 0;
+        width:200px;
+        height:200px;
+    }
+    .project-tile.b{ 
+        margin: 10px;
+        padding: 0;
+        width:200px;
+        height:200px;
+    }
+    #row{
+        padding: 3px 0;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    img.author{
+        margin: 20px 0px 10px 0; 
+    }
+
+    .container{
+        margin: 0;
+    }
+    a.page{
+        display: none;
+    }
+    #next{
+        margin-top: 10px;
+    }
 }
 
 
@@ -498,18 +621,24 @@ hr{
 }
 
 .presentation {
-    margin-top: 100px;
-    color:beige;
+    margin-top: 30px;
     font-size: x-large;
     align-items:center;
 }
+a.presentation{
+    color:white;
+}
 
-
+img.author{
+    width:113px;
+    height:157px;
+    margin: 70px 100px 0px 0;
+}
 /* --------------------------FOOTER---------------------------------- */
 
 #footer {
     position: fixed;
-    background: black;
+    background: rgba(0, 0, 0, 0.3);
     height: var(--footerH);
     width: 100%;
     bottom: 0;
@@ -589,7 +718,10 @@ color:coral;
          opacity: 0;
     }
 }
-
+.frame{
+    width: 100%;
+    height: 400px;
+}
 iframe{
     border-radius: 8px;
     width: 100%;
