--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 :root{
-    --footerH: 45px;
+    --footerH: 35px;
     --textColor: antiquewhite;
     --navBar: 55px;
     --padding: 10px;
@@ -21,7 +21,7 @@ body{
     padding: 0px;   
     display: flex;
     flex-direction: column;  
-    margin-top: 50px; 
+    margin-top: 0px; 
 } 
 .container.mid{
     margin-top: 0;
@@ -40,12 +40,22 @@ ul li  {
     list-style-type: none;
 }
 
+
+
+#row_up{
+    padding: 3px 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-top: 55px;
+}
+
 #row{
     padding: 3px 0;
     width: 100%;
     display: flex;
     flex-direction: row;
-    margin-top: 15px;
+    margin-top: 3px;
 }
 
 nav{
@@ -515,13 +525,13 @@ a.page.active{
         flex-direction: column;
     }  
     .project-tile.a{ 
-        margin: 10;
+        margin: 0;
         padding: 0;
         width:200px;
         height:200px;
     }
     .project-tile.b{ 
-        margin: 10px;
+        margin: 10px 0 0 0;
         padding: 0;
         width:200px;
         height:200px;
@@ -534,7 +544,7 @@ a.page.active{
         flex-direction: column;
     }
     img.author{
-        margin: 20px 0px 10px 0; 
+        margin: 0px 0px 10px 0; 
     }
 
     .container{
@@ -632,7 +642,7 @@ a.presentation{
 img.author{
     width:113px;
     height:157px;
-    margin: 70px 100px 0px 0;
+    margin: 0px 80px 0px 0;
 }
 /* --------------------------FOOTER---------------------------------- */
 
@@ -657,13 +667,14 @@ img.author{
     height: 100px;
     width: 125px;
     padding: 0px 30px;
-    padding-top: 20px;
+    padding-top: 5px;
     transition: 0.5s;
 }
 #footer-list{
     display: none;
 }
 address{
+    padding: 0;
     text-align: left;
     width:250px;
     margin-left: 5px;
