--- a/view/index.html
+++ b/view/index.html
@@ -10,7 +10,7 @@
              integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../public/styles.css">
-    <title>Zory's Poftfolio</title>
+    <title>Zory's Portfolio</title>
 </head>
 <body>
 <div id="wraper">
@@ -64,7 +64,7 @@
 <!-- ------------------------ ABOUT --------------------------->
       
         <section id ="about">
-            <div id="row">
+            <div id="row_up">
                 <img class="author" src="../pictures/pic07-p.jpg" alt="author" > 
                 <div class="container">
                     <h2 class="presentation" >
@@ -116,8 +116,7 @@
                         <span>University:</span></br>
                         <ul class="indent">
                           <li>MSc Informatics - Multimedia Technology.</li>
-                          <li>MSc Architecture.
-                            </br>
+                          <li>MSc Architecture (including BS).                            
                             Course in MSc Urban Planning.</li>    
                         </ul>
                         
@@ -217,11 +216,11 @@
                                 "/>
                             </div>              
                                 
-                                <hr> Heat Map
+                                <hr> Metric/Imperial Converter
                             <div id="filter">
                                 <a href="https://boilerplate-project-metricimpconverter.zorrey.repl.co/" target="_blank">                    
                                 <hr> 
-                                <h4>Heat Map</h4>
+                                <h4>Metric/Imperial Converter</h4>
                                 
                                 <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
                                 <hr> </a>
@@ -525,8 +524,7 @@
 <!-- ------------------------ FOOTER --------------------------------->
     <footer id="footer">    
         <div id="row">           
-        <address class="author">
-              </br>
+        <address class="author">              
               <a class="author" id="git-link" href="https://github.com/zorrey" target="_blank">Zory's GitHub</a>
         </address>
         <div id="profile">
