--- a/view/index.html
+++ b/view/index.html
@@ -132,6 +132,7 @@
             
                 <h2 class="projects"> MY PROJECTS </h2>  
                 <span class="data">HTML, CSS, Node.js, Express.js, MongoDB database.</span>
+
                     <div id="card-1" class="card-1 active-c">
                         <div id="p-card" >             
                         <div  class="project-tile a">  
@@ -221,7 +222,7 @@
                                 <hr> </a>
                             </div> 
                         </div>
-                        <div  class="project-tile b"> 
+               <!--          <div  class="project-tile b"> 
                             <div class="window">
                                 <img id="project-pic" src="../pictures/library.jpg"  alt="Personal Library"/>
                             </div>               
@@ -234,7 +235,7 @@
                             <p> This full stack JavaScript app is built with Node.js, Express.js, MongoDB database and tested with Mocha and Chai.</p> 
                             <hr> </a>
                         </div> 
-                        </div>	 
+                        </div>	 --> 
                         </div>	                               
                         </div> 
 
