card 2 visibility revised

--- a/view/index.html
+++ b/view/index.html
@@ -193,7 +193,7 @@
                         </ul> 
                         </div>
                     </div><!-- end project card 1 -->
-                    <div id="card-2" class="card-2 active-c">
+                    <div id="card-2" class="card-2">
                         <div id="p-card" >             
                         <div  class="project-tile a">  
                             <div class="window">
