--- a/view/index.html
+++ b/view/index.html
@@ -134,6 +134,7 @@
                 <span class="data">HTML, CSS, Node.js, Express.js, MongoDB database.</span>
 
                     <div id="card-1" class="card-1 active-c">
+                        
                         <div id="p-card" >             
                         <div  class="project-tile a">  
                             <div class="window">
@@ -143,6 +144,18 @@
                                 <a href="https://zorys-library.zorrey.repl.co/" target="_blank">                    
                                 <hr> 
                                 <h4>JavaScript <br> Zory's Library</h4>
+                                <p>  This full stack JavaScript app is built with Node.js, Express.js, Mongoose-MongoDB database</p> 
+                                <hr> </a>
+                            </div>     
+                        </div>	
+                        <div  class="project-tile a">  
+                            <div class="window">
+                                <img id="project-pic" src="../pictures/Message-board.jpg"  alt="Agora Forum"/>                                
+                            </div>  <hr> Agora Forum
+                            <div id="filter">
+                                <a href="https://message-board.zorrey.repl.co/" target="_blank">                    
+                                <hr> 
+                                <h4>JavaScript <br> Agora Forum</h4>
                                 <p>  This full stack JavaScript app is built with Node.js, Express.js, Mongoose-MongoDB database</p> 
                                 <hr> </a>
                             </div>     
@@ -192,6 +205,7 @@
                         <li><a class="btn btn-light" id="next" onclick="openPCard('card-2', 'card-1')">NEXT</a></li>               
                         </ul> 
                         </div>
+
                     </div><!-- end project card 1 -->
                     <div id="card-2" class="card-2">
                         <div id="p-card" >             
@@ -561,8 +575,6 @@
                             <hr> </a>
                         </div> 
                     </div>	 -->
-               
-                    
 
                 </div> 
                 <div  class="pr-list">
@@ -580,10 +592,7 @@
                                         
                     </ul> 
                 </div>
-                    </div><!-- end project card 6-->     
-            
-  
-                        
+                    </div><!-- end project card 6-->                     
         </section> <!--  end projects -->
         <!-- <script  src="../public/index.js"></script> -->
        <!--  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
