Pen projects revised to be full page

--- a/view/index.html
+++ b/view/index.html
@@ -342,7 +342,7 @@
                                 </div>                            
                             <hr> Calculator
                             <div id="filter">
-                                <a href="https://codepen.io/Zory/pen/oNEZrNz" target="_blank">                    
+                                <a href="https://codepen.io/Zory/full/oNEZrNz" target="_blank">                    
                                 <hr> 
                                 <h4>JavaScript Calculator</h4>
                                 <p> This App is Front End Development Libraries project built with React.</p> 
@@ -358,7 +358,7 @@
                                     
                                     <hr> Drum Machine                    
                                 <div id="filter">
-                                    <a href="https://codepen.io/Zory/pen/eYVZXLP" target="_blank">                    
+                                    <a href="https://codepen.io/Zory/full/eYVZXLP" target="_blank">                    
                                     <hr> 
                                     <h4>JavaScript Drum Machine</h4>
                                     <p> This App is Front End Development Libraries project built with React.</p> 
@@ -372,7 +372,7 @@
                                 
                                 <hr>Quote Machine
                             <div id="filter">
-                                <a href="https://codepen.io/Zory/pen/yLpZZxE" target="_blank">                    
+                                <a href="https://codepen.io/Zory/full/yLpZZxE" target="_blank">                    
                                 <hr> 
                                 <h4>JavaScript Quote Machine</h4>
                                 <p> This App is Front End Development Libraries project built with React.</p> 
@@ -404,7 +404,7 @@
                             </div>                   
                             <hr>  25 + 5 Clock
                             <div id="filter">
-                                <a href="https://codepen.io/Zory/pen/GRQWbvd" target="_blank">                    
+                                <a href="https://codepen.io/Zory/full/GRQWbvd" target="_blank">                    
                                 <hr> 
                                 <h4>JavaScript <br> 25 + 5 Clock</h4>
                                 <p> This App is Front End Development Libraries project built with React.</p> 
@@ -418,7 +418,7 @@
                                 </div>                                 
                                 <hr> Choropleth Map
                             <div id="filter">
-                                <a href="https://codepen.io/Zory/pen/RwQMWge" target="_blank">                    
+                                <a href="https://codepen.io/Zory/full/RwQMWge" target="_blank">                    
                                 <hr> 
                                 <h4>Choropleth Map</h4>
                                 <p> This App is Data Visualization project built with HTML, JavaScript, CSS, and the D3 svg-based visualization library.</p> 
@@ -431,7 +431,7 @@
                                 </div>                                     
                                 <hr> Heat Map
                             <div id="filter">
-                                <a href="https://codepen.io/Zory/pen/jOZzbqO" target="_blank">                    
+                                <a href="https://codepen.io/Zory/full/jOZzbqO" target="_blank">                    
                                 <hr> 
                                 <h4>Heat Map</h4>
                                 <p> This App is Data Visualization project built with HTML, JavaScript, CSS, and the D3 svg-based visualization library.</p> 
@@ -477,7 +477,7 @@
                                     </div>                                     
                                     <hr>  Architect Zaha Hadid Tribute Page
                                 <div id="filter">
-                                    <a href="https://codepen.io/Zory/pen/mdLyNmL"  target="_blank">                    
+                                    <a href="https://codepen.io/Zory/full/mdLyNmL"  target="_blank">                    
                                     <hr> 
                                     <h4>Architect Zaha Hadid Tribute Page</h4>
                                     <p> App built with HTML and CSS. </p> 
@@ -490,7 +490,7 @@
                                     </div>
                                     <hr> Survey Form
                                     <div id="filter">
-                                        <a href="https://codepen.io/Zory/pen/wvjGjLm" target="_blank">                    
+                                        <a href="https://codepen.io/Zory/full/wvjGjLm" target="_blank">                    
                                         <hr> 
                                         <h4>Survey Form</h4>
                                         <p> App built with HTML, CSS and JavaScript.</p> 
@@ -526,7 +526,7 @@
                                 </div>  
                                     <hr> Landing  Page - certification project.
                                 <div id="filter">
-                                    <a href="https://codepen.io/Zory/pen/QWrNQQR" target="_blank">                    
+                                    <a href="https://codepen.io/Zory/full/QWrNQQR" target="_blank">                    
                                     <hr> 
                                     <h4>Landing  Page - certification project.</h4>
                                     <p> App built with HTML, CSS and JavaScript.</p> 
