--- a/view/index.html
+++ b/view/index.html
@@ -50,7 +50,7 @@
             MY PORTFOLIO
             </h1>
             <div id="header-text">             
-                <h2> Hi, I'm Zory.</h2>
+                <h2> Hi, I'm Zory S.</h2>
                 <p> Front-end / Back-end Developer </p>
             </div>
             <ul class="continue">
@@ -68,7 +68,7 @@
               
                 <div class="container">
                     <h2 class="presentation" >
-                    <p id="pr">My name is Zory </p>
+                    <p id="pr">My name is Zory Stavrova</p>
                     <p id="pr">I am passionate designer and developer.</p> 
                 </h2>
                 </div> 
