--- a/view/index.html
+++ b/view/index.html
@@ -50,7 +50,7 @@
             MY PORTFOLIO
             </h1>
             <div id="header-text">             
-                <h2> Hi, I'm Zory S.</h2>
+                <h2> Hi, I'm Zory.</h2>
                 <p> Front-end / Back-end Developer </p>
             </div>
             <ul class="continue">
