--- a/public/main.css
+++ b/public/main.css
@@ -32,6 +32,7 @@ ul{
     padding: 0px;
 }
 a {
+    font-family: "Source Sans Pro", Helvetica, sans-serif;  
     text-decoration: none;
     text-decoration-style: none;
 }
