--- a/view/index.html
+++ b/view/index.html
@@ -51,12 +51,12 @@
             <h1 class="welcome">
             MY PORTFOLIO
             </h1>
-            <div id="header-text">             
-                <h2> Hi, I'm Zory.</h2>
-                <p> Front-end / Back-end Developer </p>
+            <div class="header-text">             
+                <h2 > Hi, I'm Zory.</h2>
+                <p > Front-end / Back-end Developer </p>
             </div>
             <ul class="continue">
-            <li><a href="#projects" class="presentation">Continue to projects </a></li>                
+            <li><a href="#projects" class="presentation">Continue</a></li>                
             </ul> 
                <!--  iFRAME
                 <iframe frameborder="0" width="40%" height="800px" src="https://sudoku.zorrey.repl.co?embed=true"></iframe>  -->  
@@ -66,24 +66,12 @@
 <!-- ------------------------ ABOUT --------------------------->
       
         <section id ="about">
-<<<<<<< HEAD
             <div id="row-up">
                 <img class="author-photo" src="../pictures/pic07-p.jpg" alt="author" > 
                     <h2 class="profile" >
                     My name is Zory <br>
                     I am passionate designer and developer.
                     </h2>                 
-=======
-            <div id="row_up">
-              <img class="author" src="../pictures/pic07-p.jpg" alt="author" > 
-                <div class="container">
-                    <h2 class="presentation" >
-                    <p id="pr">My name is Zory Stavrova</p>
-                    <p id="pr">I am passionate designer and developer.</p> 
-                </h2>
-                </div> 
-                 
->>>>>>> d915b02c07a9f28376963a773482062e3baffdb0
             </div>
                   
           <div class="container mid"> 
@@ -150,11 +138,10 @@
                         <li><a class="btn btn-light" id="next" onclick="openPCard('card-2', 'card-1')">NEXT</a></li>      
                         </ul>
                         <div id="p-card" >             
-<<<<<<< HEAD
                             <div  class="project-tile a">  
                                 <div class="window">
                                     <img id="project-pic" src="../pictures/sudoku copy.jpg"  alt="Sudoku"/>                                                                  
-                                </div>  <hr> <div class="title">Sudoku Solver & Generator</div> 
+                                </div>  <hr> <div class="title">Sudoku Solver</div> 
                                 <div id="filter">
                                     <a href="https://sudoku.zorrey.repl.co" target="_blank">                    
                                         <hr> 
@@ -176,33 +163,6 @@
                                     <hr> </a>
                                 </div>     
                             </div>                                        
-=======
-                        <div  class="project-tile a">  
-                            <div class="window">
-                                <img id="project-pic" src="../pictures/Z-library.jpg"  alt="Zory's Library"/>                                
-                            </div>  <hr>  Zory's Library
-                            <div id="filter">
-                                <a href="https://zorys-library.zorrey.repl.co/" target="_blank">                    
-                                <hr> 
-                                <h4>JavaScript <br> Zory's Library</h4>
-                                <p>  This full stack JavaScript app is built with Node.js, Express.js, Mongoose-MongoDB database</p> 
-                                <hr> </a>
-                            </div>     
-                        </div>	
-                        <div  class="project-tile a">  
-                            <div class="window">
-                                <img id="project-pic" src="../pictures/Message-board.jpg"  alt="Agora Forum"/>                                
-                            </div>  <hr> Agora Forum
-                            <div id="filter">
-                                <a href="https://message-board.zorrey.repl.co/" target="_blank">                    
-                                <hr> 
-                                <h4>JavaScript <br> Agora Forum</h4>
-                                <p>  This full stack JavaScript app is built with Node.js, Express.js, Mongoose-MongoDB database</p> 
-                                <hr> </a>
-                            </div>     
-                        </div>	
-                                                    
->>>>>>> d915b02c07a9f28376963a773482062e3baffdb0
                         </div> 
 
                         <div class="pr-list">
@@ -331,7 +291,7 @@
                         <div id="filter">
                             <a href="https://American-British-Translator.zorrey.repl.co" target="_blank">                    
                             <hr> 
-                            <h4>American / British English Translator</h4>
+                            <h4>Translator</h4>
                             <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
                             <hr> </a>
                         </div> 
@@ -493,7 +453,7 @@
                                 <div class="window">
                                     <img id="project-pic" src="../pictures/portfolio.jpg"  alt="Portfolio site"/>
                                 </div>                                     
-                                <hr> <div class="title">Portfolio site</div> 
+                                <hr> <div class="title">Portfolio</div> 
                             <div id="filter">
                                 <a href="#header"  target="_blank">                    
                                 <hr> 
@@ -507,7 +467,7 @@
                                     <div class="window">
                                         <img id="project-pic" src="../pictures/ZahaHadid.jpg"  alt="Architect Zaha Hadid Tribute Page"/>
                                     </div>                                     
-                                    <hr>  <div class="title">Architect Zaha Hadid Tribute Page</div>
+                                    <hr>  <div class="title">Architect Zaha Hadid</div>
                                 <div id="filter">
                                     <a href="https://codepen.io/Zory/full/mdLyNmL"  target="_blank">                    
                                     <hr> 
@@ -560,7 +520,7 @@
                                     <img id="project-pic" src="../pictures/landingPage.jpg"  alt="Landing Page"/>
                                   
                                 </div>  
-                                    <hr><div class="title">Landing  Page - certification project.</div> 
+                                    <hr><div class="title">Landing  Page</div> 
                                 <div id="filter">
                                     <a href="https://codepen.io/Zory/full/QWrNQQR" target="_blank">                    
                                     <hr> 
@@ -575,7 +535,7 @@
                                         <img id="project-pic" src="../pictures/Header Parser.jpg"  alt="Header Parser Microservice"/>
                                     </div>         
                                         
-                                        <hr><div class="title">Header Parser Microservice</div> 
+                                        <hr><div class="title">Header Parser</div> 
                                     <div id="filter">
                                         <a href="https://boilerplate-project-headerparser.zorrey.repl.co/" target="_blank">                    
                                             <hr> 
@@ -589,7 +549,7 @@
                                         <img id="project-pic" src="../pictures/URL Shortener.jpg"  alt="URL Shortener Microservice"/>
                                     </div>               
                                     
-                                        <hr><div class="title">URL Shortener Microservice</div>
+                                        <hr><div class="title">URL Shortener</div>
                                     <div id="filter">
                                         <a href="https://boilerplate-project-urlshortener.zorrey.repl.co/" target="_blank">                    
                                         <hr> 
