Pathfinder with new link on Glitch

--- a/view/index.html
+++ b/view/index.html
@@ -192,7 +192,7 @@
                                 <img id="project-pic" src="../pictures/pathfinding.jpg"  alt="Pathfinding App"/>                                 
                             </div>  <hr>  <div class="title">Pathfinder </div>
                             <div id="filter">
-                                <a href="https://pathfinding.zorrey.repl.co/" target="_blank">                    
+                                <a href="https://pathfinder-zory-.glitch.me/" target="_blank">                    
                                     <hr> 
                                     <h4>JavaScript <br> Pathfinder</h4>
                                     <p>  This JavaScript app is built with React</p> 
